# assrender

./: .gitignore  LICENSE  NOTICE  README.md  gradle.properties  settings.gradle.kts
assrender/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
assrender/src/main/assets/: fonts.conf
assrender/src/main/cpp/: CMakeLists.txt  ass_direct.c  ass_direct.h  ass_direct_jni.c  assrender_jni.c  subtitle_pipeline.c  subtitle_pipeline.h
assrender/src/main/kotlin/io/github/assrender/: AssDirectBridge.kt  AssExtractorOutput.kt  AssExtractorsFactory.kt  AssHandler.kt  AssMatroskaExtractor.kt  AssRenderConfig.kt  AssRenderer.kt  AssRenderersFactory.kt  AssSubtitleParserFactory.kt  AssSubtitleRenderer.kt  AssTextRenderer.kt  AssTimeRenderer.kt  AssTrackOutput.kt  NativeBridge.kt  SubtitleOverlayView.kt  SubtitleTrack.kt
gradle/: libs.versions.toml
prebuilt/arm64-v8a/lib/: libass.la  libexpat.la  libfontconfig.la  libfreetype.la  libfribidi.la
prebuilt/arm64-v8a/lib/cmake/harfbuzz/: harfbuzzConfig-noconfig.cmake  harfbuzzConfig.cmake
prebuilt/arm64-v8a/lib/pkgconfig/: expat.pc  fontconfig.pc  freetype2.pc  fribidi.pc  harfbuzz.pc  libass.pc  libavcodec.pc  libavformat.pc  libavutil.pc  libswresample.pc
prebuilt/armeabi-v7a/include/: expat_config.h
prebuilt/armeabi-v7a/include/libavutil/: ffversion.h
prebuilt/armeabi-v7a/lib/: libass.la  libexpat.la  libfontconfig.la  libfreetype.la  libfribidi.la
prebuilt/armeabi-v7a/lib/cmake/harfbuzz/: harfbuzzConfig.cmake
prebuilt/armeabi-v7a/lib/pkgconfig/: expat.pc  fontconfig.pc  freetype2.pc  fribidi.pc  harfbuzz.pc  libass.pc  libavcodec.pc  libavformat.pc  libavutil.pc  libswresample.pc
scripts/: build-all.sh  build-ffmpeg.sh  build-fontconfig.sh  build-libass.sh
